--- a/pages/contact.html
+++ b/pages/contact.html
@@ -288,7 +288,10 @@
               <div class="get-row">
                 <div class="get-col get-in-Text">
                   <h2>Let's Get In Touch</h2>
-                  <p>Your Search for a reliable IT Services Partner and emerging technology holder ends here. Send Us the Requirements & Let’s Talk.
+                  <p>
+                    Your Search for a reliable IT Services Partner and emerging
+                    technology holder ends here. Send Us the Requirements &
+                    Let’s Talk.
                   </p>
                 </div>
                 <div class="get-col button-white">
@@ -370,12 +373,14 @@
       </div>
       <ul class="sidebar-menu">
         <li><img src="../assets/header-logo.png" alt="" /></li>
-        <li><a id="home-sidebar" href="../index.html">Home</a></li>
+        <li style="margin-top: 50px">
+          <a id="home-sidebar" href="../index.html">Home</a>
+        </li>
         <li><a id="Service-sidebar" href="#">Services</a></li>
-        <li><a href="../index.html">Technologies</a></li>
-        <li><a href="../index.html">Careers</a></li>
-        <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
-        <li><a id="contact-sidebar" href="../index.html">Contact</a></li>
+        <li><a href="./careers.html">Careers</a></li>
+        <li><a href="./projects.html">Projects</a></li>
+        <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
+        <li><a id="contact-sidebar" href="../index.html">Contact Us</a></li>
       </ul>
     </div>
     <script
