--- a/pages/maintenance.html
+++ b/pages/maintenance.html
@@ -106,7 +106,7 @@
                   <li><a href="./careers.html" class=".main-a">Careers</a></li>
                   <li><a href="./projects.html" class=".main-a">Project</a></li>
                   <li>
-                    <a id="About-us"  href="./aboutus.html">About Us</a>
+                    <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
                   <li>
                     <a id="Contact-us" class="active-link" href="./contact.html"
@@ -310,7 +310,9 @@
                 <ul class="main-footer-list">
                   <li><a href="./softwaredev.html">Software Development</a></li>
                   <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
-                  <li><a href="./maintenance.html">Maintenance and Support</a></li>
+                  <li>
+                    <a href="./maintenance.html">Maintenance and Support</a>
+                  </li>
                   <li><a href="./advisory.html">Advisory</a></li>
                 </ul>
               </div>
@@ -320,8 +322,8 @@
                 <h4 class="footer-title">Quick links</h4>
                 <ul class="main-footer-list">
                   <li><a href="../index.html">Home</a></li>
-                  <li><a href="./careers.html">Career</a></li>
-                  <li><a href="./projects.html">Project</a></li>
+                  <li><a href="./careers.html">Careers</a></li>
+                  <li><a href="./projects.html">Projects</a></li>
                   <li><a href="./aboutus.html">About Us</a></li>
                   <li><a href="./contact.html">Contact Us</a></li>
                 </ul>
@@ -353,11 +355,14 @@
       </div>
       <ul class="sidebar-menu">
         <li><img src="../assets/header-logo.png" alt="" /></li>
-        <li><a id="home-sidebar" href="../index.html">Home</a></li>
-        <li><a href="./careers.html">Career</a></li>
-        <li><a href="./projects.html">Project</a></li>
-        <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
-        <li><a id="contact-sidebar" href="./contact.html">Contact</a></li>
+        <li style="margin-top: 50px">
+          <a id="home-sidebar" href="../index.html">Home</a>
+        </li>
+        <li><a href="#">Services</a></li>
+        <li><a href="./careers.html">Careers</a></li>
+        <li><a href="./projects.html">Projects</a></li>
+        <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
+        <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
       </ul>
     </div>
 
