--- a/pages/projects.html
+++ b/pages/projects.html
@@ -343,10 +343,10 @@
       </div>
       <ul class="sidebar-menu">
         <li><img src="../assets/header-logo.png" alt="" /></li>
-        <li><a id="home-sidebar" href="../index.html">Home</a></li>
+        <li style="margin-top: 50px;"><a id="home-sidebar" href="../index.html">Home</a></li>
         <li><a id="Service-sidebar" href="#">Services</a></li>
         <li><a href="./careers.html">Careers</a></li>
-        <li><a href="./projects.html">Careers</a></li>
+        <li><a href="./projects.html">Projects</a></li>
         <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
         <li><a id="contact-sidebar" href="./contact.html">Contact</a></li>
       </ul>
