--- a/pages/softwaredev.html
+++ b/pages/softwaredev.html
@@ -101,8 +101,8 @@
                     </ul>
                   </li>
                   <li><a href="../index.html" class=".main-a">Technologies</a></li>
-                  <li><a href="./careers.html" class=".main-a">Career</a></li>
-                  <li><a href="./projects.html" class=".main-a">Project</a></li>
+                  <li><a href="./careers.html" class=".main-a">Careers</a></li>
+                  <li><a href="./projects.html" class=".main-a">Projects</a></li>
                   <li>
                     <a id="About-us"  href="./aboutus.html">About Us</a>
                   </li>
@@ -358,11 +358,11 @@
       </div>
       <ul class="sidebar-menu">
         <li><img src="../assets/header-logo.png" alt="" /></li>
-        <li><a id="home-sidebar" href="../index.html">Home</a></li>
+        <li style="margin-top: 50px;"><a id="home-sidebar" href="../index.html">Home</a></li>
         <li><a href="./careers.html">Careers</a></li>
         <li><a href="./projects.html">Projects</a></li>
-        <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
-        <li><a id="contact-sidebar" href="./contact.html">Contact</a></li>
+        <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
+        <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
       </ul>
     </div>
 
