--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -486,8 +486,8 @@
                 <h4 class="footer-title">Quick links</h4>
                 <ul class="main-footer-list">
                   <li><a href="../index.html">Home</a></li>
-                  <li><a href="#">Services</a></li>
                   <li><a href="./careers.html">Careers</a></li>
+                  <li><a href="./projects.html">Projects</a></li>
                   <li><a href="./aboutus.html">About Us</a></li>
                   <li><a href="./contact.html">Contact Us</a></li>
                 </ul>
@@ -519,12 +519,12 @@
       </div>
       <ul class="sidebar-menu">
         <li><img src="../assets/header-logo.png" alt="" /></li>
-        <li><a id="home-sidebar" href="../index.html">Home</a></li>
+        <li style="margin-top: 50px"><a id="home-sidebar" href="../index.html">Home</a></li>
         <li><a id="Service-sidebar" href="#">Services</a></li>
-        <li><a href="../index.html">Technologies</a></li>
         <li><a href="./careers.html">Careers</a></li>
-        <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
-        <li><a id="contact-sidebar" href="./contact.html">Contact</a></li>
+        <li><a href="./projects.html">Projects</a></li>
+        <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
+        <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
       </ul>
     </div>
     <script>
