--- a/pages/careers.html
+++ b/pages/careers.html
@@ -511,11 +511,11 @@
       </div>
       <ul class="sidebar-menu">
         <li><img src="../assets/header-logo.png" alt="" /></li>
-        <li><a id="home-sidebar" href="../index.html">Home</a></li>
-        <li><a href="../index.html">Technologies</a></li>
+        <li style="margin-top: 50px"><a id="home-sidebar" href="../index.html">Home</a></li>
         <li><a href="./careers.html">Careers</a></li>
-        <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
-        <li><a id="contact-sidebar" href="./contact.html">Contact</a></li>
+        <li><a href="./projects.html">Projects</a></li>
+        <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
+        <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
       </ul>
     </div>
 
