--- a/pages/softwaredev.html
+++ b/pages/softwaredev.html
@@ -69,7 +69,7 @@
                       style="color: #0092ff"
                       >Services</a
                     >
-                    <ul class="services-list">
+                    <ul class="services-list" style="color: #1d2c38;">
                       <li>
                         <a href="./softwaredev.html"
                           ><span class="icon-span">⤥</span
@@ -107,7 +107,7 @@
                     <a id="About-us"  href="./aboutus.html">About Us</a>
                   </li>
                   <li>
-                    <a id="Contact-us" class="active-link" href="./contact.html"
+                    <a id="Contact-us" class="main-a" href="./contact.html"
                       >Contact Us</a
                     >
                   </li>
