added contact us page changes

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -231,24 +231,29 @@
                 </div>
               </div>
             </div>
-            <div class="contact-col">
-              <div class="upper-contact">
-                <img src="../assets/contacts/1.jpg" alt="" />
+          </div>
+          <div class="adr">
+            <div class="adr-row">
+              <div class="adr-col">
+                <h4 class="txt">Phone Number</h4>
+                <span class="txth"
+                  >+91 9048245318, <br />
+                  +91 8921229471
+                </span>
               </div>
-              <div class="lower-contact">
-                <h5><a href="#">Contact-1</a></h5>
-                <p class="contact-detail">
-                  <i class="fa-solid fa-phone"></i><span>+9074376257</span>
-                </p>
-                <p class="contact-detail">
-                  <i class="fa-solid fa-envelope"></i
-                  ><span>scipy@example.com</span>
-                </p>
-                <div class="contact-us">
-                  <a href="#"
-                    >Contact Us <i class="fa-solid fa-arrow-right"></i
-                  ></a>
-                </div>
+              <div class="adr-col">
+                <h4 class="txt">Email Address</h4>
+                <span class="txth"
+                  ><a href="#">scipytechnologies@gmail.com </a
+                  ><a href="#">info@scipytechnologies.com </a></span
+                >
+              </div>
+              <div class="adr-col">
+                <h4 class="txt">Location</h4>
+                <span class="txth">
+                  Sunny Mead Lane, Near Jubilee Hospital, First Floor, Erathodi,
+                  Palayam Trivandrum 695033
+                </span>
               </div>
             </div>
           </div>
