--- a/pages/careers.html
+++ b/pages/careers.html
@@ -174,10 +174,10 @@
       <section class="team-members" style="margin-top: 100px">
         <div class="auto-container">
           <div class="gallery-title">
-            <h3 class="sec-title-gallery">
+            <!-- <h3 class="sec-title-gallery">
               <i class="fa-brands fa-studiovinari"></i>OUR PLACED
-            </h3>
-            <h2 class="gallery-title-head">Placed Students</h2>
+            </h3> -->
+            <h2 class="gallery-title-head"> Our Placed Candidates</h2>
             <div class="sec-title-seperator">
               <div class="blue-item"></div>
             </div>
