--- a/pages/contact.html
+++ b/pages/contact.html
@@ -249,7 +249,7 @@
                 >
               </div>
               <div class="adr-col">
-                <h4 class="txt">Location</h4>
+                <h4 class="txt">Head Office</h4>
                 <span class="txth">
                   Sunny Mead Lane, Near Jubilee Hospital, First Floor, Erathodi,
                   Palayam Trivandrum 695033
