--- a/index.html
+++ b/index.html
@@ -754,30 +754,30 @@
       <section class="Clients-Section">
         <div class="auto-container">
           <div class="clients-title">
-            <h3><i class="fa-solid fa-briefcase"></i>Our Clients</h1>
+            <h3><i class="fa-solid fa-briefcase"></i>Our Clients</h3>
           </div>
           <div class="clients">
             <div class="owl-carousel owl-theme clients-owl">
               <div class="clients-logo">
-                <img src="./assets/clients/1.png" alt="">
+                <img src="./assets/clients/1.png" alt="" />
               </div>
               <div class="clients-logo">
-                <img src="./assets/clients/1.png" alt="">
+                <img src="./assets/clients/1.png" alt="" />
               </div>
               <div class="clients-logo">
-                <img src="./assets/clients/1.png" alt="">
+                <img src="./assets/clients/1.png" alt="" />
               </div>
               <div class="clients-logo">
-                <img src="./assets/clients/1.png" alt="">
+                <img src="./assets/clients/1.png" alt="" />
               </div>
               <div class="clients-logo">
-                <img src="./assets/clients/1.png" alt="">
+                <img src="./assets/clients/1.png" alt="" />
               </div>
               <div class="clients-logo">
-                <img src="./assets/clients/1.png" alt="">
+                <img src="./assets/clients/1.png" alt="" />
               </div>
               <div class="clients-logo">
-                <img src="./assets/clients/1.png" alt="">
+                <img src="./assets/clients/1.png" alt="" />
               </div>
             </div>
           </div>
@@ -795,7 +795,6 @@
             </div>
           </div>
           <div class="contact-row">
-            
             <div class="contact-col">
               <div class="upper-contact">
                 <img src="./assets/contacts/1.jpg" alt="" />
@@ -1107,7 +1106,23 @@
             </div>
             <div class="footer-col">
               <div class="footer-widget-links-2">
-                <h4 class="footer-title">Lateset News</h4>
+                <h4 class="footer-title">Socials</h4>
+                <ul class="main-footer-list social-footer-list">
+                  <li>
+                    <a href="https://www.facebook.com/SciPytechceo"
+                      ><i class="fa-brands fa-facebook"></i>facebook</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://www.instagram.com/scipytechnologies/"><i class="fa-brands fa-instagram"></i>instagram</a>
+                  </li>
+                  <li>
+                    <a href="https://www.linkedin.com/company/scipytechnologies/mycompany/"><i class="fa-brands fa-linkedin"></i>linkedin</a>
+                  </li>
+                  <li>
+                    <a href="mailto:info@scipytechnologies.com"><i class="fa-solid fa-envelope"></i>mail us</a>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
