Added saidebar collapse menu

--- a/index.html
+++ b/index.html
@@ -1145,26 +1145,27 @@
         <span></span>
       </div>
       <ul class="sidebar-menu">
-        <li><img src="./assets/header-logo.png" alt="" /></li>
-        <li style="margin-top: 50px"><a id="home-sidebar" href="#">Home</a></li>
+        <!-- <li><img src="./assets/header-logo.png" alt="Text" /></li> -->
+        <li><a id="home-sidebar" data-page="home" href="#">Home</a></li>
         <li class="service-li">
-          <a id="Service-sidebar" href="#">Services</a>
-          <!-- <ul class="service-ul">
-            <li><a href="#">Software Development</a></li>
-            <li><a href="#">Software Development</a></li>
-            <li><a href="#">Software Development</a></li>
-            <li><a href="#">Software Development</a></li>
-          </ul> -->
+          <a id="toggle-service" data-page="Services" href="#">Services</a>
+          <ul id="menu" class="toogle-ul">
+            <li><a href="./pages/softwaredev.html" data-page="Service1">Software Development</a></li>
+            <li><a href="./pages/AdvancedTech.html" data-page="Service2">Advanced Tech</a></li>
+            <li><a href="./pages/maintenance.html" data-page="Service3">Maintenance and Support</a></li>
+            <li><a href="./pages/advisory.html" data-page="Service4">Advisory</a></li>
+          </ul>
         </li>
-        <li><a id="tech-sidebar" href="#">Technologies</a></li>
-        <li><a href="./pages/careers.html">Careers</a></li>
-        <li><a href="./pages/projects.html">Projects</a></li>
-        <li><a id="About-us-sidebar" href="#">About Us</a></li>
+        <li><a id="tech-sidebar" href="#" data-page="Tech">Technologies</a></li>
+        <li><a href="./pages/careers.html" data-page="Careers">Careers</a></li>
+        <li><a href="./pages/projects.html" data-page="Projects">Projects</a></li>
+        <li><a id="About-us-sidebar" data-page="AboutUs" href="#">About Us</a></li>
         <li>
-          <a id="contact-sidebar" href="./pages/contact.html">Contact Us</a>
+          <a id="contact-sidebar" href="./pages/contact.html" data-page="ContactUs">Contact Us</a>
         </li>
       </ul>
     </div>
+    <script src="./js/Sidebarcollapse.js"></script>
     <script>
       const SoftwareCard1 = document.getElementById("Software-service1");
       const SoftwareCard2 = document.getElementById("Software-service2");
