--- a/pages/maintenance.html
+++ b/pages/maintenance.html
@@ -354,18 +354,26 @@
         <span></span>
       </div>
       <ul class="sidebar-menu">
-        <li><img src="../assets/header-logo.png" alt="" /></li>
-        <li style="margin-top: 50px">
+        <!-- <li><img src="../assets/header-logo.png" alt="" /></li> -->
+        <li>
           <a id="home-sidebar" href="../index.html">Home</a>
         </li>
-        <li><a href="#">Services</a></li>
+        <li>
+          <a id="toggle-service" href="#" style="color: #fff; background-color: #0092ff">Services</a>
+          <ul id="menu" class="toogle-ul">
+            <li><a href="./softwaredev.html">Software Development</a></li>
+            <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
+            <li><a href="./maintenance.html" style="color: #fff; background-color: #0092ff">Maintenance and Support</a></li>
+            <li><a href="./advisory.html">Advisory</a></li>
+          </ul>
+        </li>
         <li><a href="./careers.html">Careers</a></li>
         <li><a href="./projects.html">Projects</a></li>
         <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
         <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
       </ul>
     </div>
-
+    <script src="../js/Sidebarcollapse.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
       integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
