--- a/pages/softwaredev.html
+++ b/pages/softwaredev.html
@@ -69,7 +69,7 @@
                       style="color: #0092ff"
                       >Services</a
                     >
-                    <ul class="services-list" style="color: #1d2c38;">
+                    <ul class="services-list" style="color: #1d2c38">
                       <li>
                         <a href="./softwaredev.html"
                           ><span class="icon-span">⤥</span
@@ -100,11 +100,15 @@
                       </li>
                     </ul>
                   </li>
-                  <li><a href="../index.html" class=".main-a">Technologies</a></li>
-                  <li><a href="./careers.html" class=".main-a">Careers</a></li>
-                  <li><a href="./projects.html" class=".main-a">Projects</a></li>
                   <li>
-                    <a id="About-us"  href="./aboutus.html">About Us</a>
+                    <a href="../index.html" class=".main-a">Technologies</a>
+                  </li>
+                  <li><a href="./careers.html" class=".main-a">Careers</a></li>
+                  <li>
+                    <a href="./projects.html" class=".main-a">Projects</a>
+                  </li>
+                  <li>
+                    <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
                   <li>
                     <a id="Contact-us" class="main-a" href="./contact.html"
@@ -314,7 +318,9 @@
                 <ul class="main-footer-list">
                   <li><a href="./softwaredev.html">Software Development</a></li>
                   <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
-                  <li><a href="./maintenance.html">Maintenance and Support</a></li>
+                  <li>
+                    <a href="./maintenance.html">Maintenance and Support</a>
+                  </li>
                   <li><a href="./advisory.html">Advisory</a></li>
                 </ul>
               </div>
@@ -357,15 +363,35 @@
         <span></span>
       </div>
       <ul class="sidebar-menu">
-        <li><img src="../assets/header-logo.png" alt="" /></li>
-        <li style="margin-top: 50px;"><a id="home-sidebar" href="../index.html">Home</a></li>
+        <!-- <li><img src="../assets/header-logo.png" alt="" /></li> -->
+        <li><a id="home-sidebar" href="../index.html">Home</a></li>
+        <li>
+          <a
+            id="toggle-service"
+            href="#"
+            style="color: #fff; background-color: #0092ff"
+            >Services</a
+          >
+          <ul id="menu" class="toogle-ul">
+            <li>
+              <a
+                href="./softwaredev.html"
+                style="color: #fff; background-color: #0092ff"
+                >Software Development</a
+              >
+            </li>
+            <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
+            <li><a href="./maintenance.html">Maintenance and Support</a></li>
+            <li><a href="./advisory.html">Advisory</a></li>
+          </ul>
+        </li>
         <li><a href="./careers.html">Careers</a></li>
         <li><a href="./projects.html">Projects</a></li>
         <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
         <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
       </ul>
     </div>
-
+    <script src="../js/Sidebarcollapse.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
       integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
