fixed navbar positioning

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -489,7 +489,7 @@
           <a id="home-sidebar" href="../index.html">Home</a>
         </li>
         <li>
-          <a id="toggle-service" href="#">Services</a>
+          <a id="toggle-service" href="#">Services<i class="fa-solid fa-arrow-right serv-arrow"></i></a>
           <ul id="menu" class="toogle-ul">
             <li><a href="./softwaredev.html">Software Development</a></li>
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
