--- a/pages/softwaredev.html
+++ b/pages/softwaredev.html
@@ -370,7 +370,7 @@
             id="toggle-service"
             href="#"
             style="color: #fff; background-color: #0092ff"
-            >Services</a
+            >Services <i class="fa-solid fa-arrow-right serv-arrow"></i></a
           >
           <ul id="menu" class="toogle-ul">
             <li>
