--- a/index.html
+++ b/index.html
@@ -1114,13 +1114,20 @@
                     >
                   </li>
                   <li>
-                    <a href="https://www.instagram.com/scipytechnologies/"><i class="fa-brands fa-instagram"></i>instagram</a>
+                    <a href="https://www.instagram.com/scipytechnologies/"
+                      ><i class="fa-brands fa-instagram"></i>instagram</a
+                    >
                   </li>
                   <li>
-                    <a href="https://www.linkedin.com/company/scipytechnologies/mycompany/"><i class="fa-brands fa-linkedin"></i>linkedin</a>
+                    <a
+                      href="https://www.linkedin.com/company/scipytechnologies/mycompany/"
+                      ><i class="fa-brands fa-linkedin"></i>linkedin</a
+                    >
                   </li>
                   <li>
-                    <a href="mailto:info@scipytechnologies.com"><i class="fa-solid fa-envelope"></i>mail us</a>
+                    <a href="mailto:info@scipytechnologies.com"
+                      ><i class="fa-solid fa-envelope"></i>mail us</a
+                    >
                   </li>
                 </ul>
               </div>
@@ -1148,20 +1155,44 @@
         <!-- <li><img src="./assets/header-logo.png" alt="Text" /></li> -->
         <li><a id="home-sidebar" data-page="home" href="#">Home</a></li>
         <li class="service-li">
-          <a id="toggle-service" data-page="Services" href="#">Services</a>
+          <a id="toggle-service" data-page="Services" href="#">Services <i class="fa-solid fa-arrow-right serv-arrow"></i></a>
+
           <ul id="menu" class="toogle-ul">
-            <li><a href="./pages/softwaredev.html" data-page="Service1">Software Development</a></li>
-            <li><a href="./pages/AdvancedTech.html" data-page="Service2">Advanced Tech</a></li>
-            <li><a href="./pages/maintenance.html" data-page="Service3">Maintenance and Support</a></li>
-            <li><a href="./pages/advisory.html" data-page="Service4">Advisory</a></li>
+            <li>
+              <a href="./pages/softwaredev.html" data-page="Service1"
+                >Software Development</a
+              >
+            </li>
+            <li>
+              <a href="./pages/AdvancedTech.html" data-page="Service2"
+                >Advanced Tech</a
+              >
+            </li>
+            <li>
+              <a href="./pages/maintenance.html" data-page="Service3"
+                >Maintenance and Support</a
+              >
+            </li>
+            <li>
+              <a href="./pages/advisory.html" data-page="Service4">Advisory</a>
+            </li>
           </ul>
         </li>
         <li><a id="tech-sidebar" href="#" data-page="Tech">Technologies</a></li>
         <li><a href="./pages/careers.html" data-page="Careers">Careers</a></li>
-        <li><a href="./pages/projects.html" data-page="Projects">Projects</a></li>
-        <li><a id="About-us-sidebar" data-page="AboutUs" href="#">About Us</a></li>
         <li>
-          <a id="contact-sidebar" href="./pages/contact.html" data-page="ContactUs">Contact Us</a>
+          <a href="./pages/projects.html" data-page="Projects">Projects</a>
+        </li>
+        <li>
+          <a id="About-us-sidebar" data-page="AboutUs" href="#">About Us</a>
+        </li>
+        <li>
+          <a
+            id="contact-sidebar"
+            href="./pages/contact.html"
+            data-page="ContactUs"
+            >Contact Us</a
+          >
         </li>
       </ul>
     </div>
