--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -461,7 +461,30 @@
             </div>
             <div class="footer-col">
               <div class="footer-widget-links-2">
-                <h4 class="footer-title">Lateset News</h4>
+                <h4 class="footer-title">Socials</h4>
+                <ul class="main-footer-list social-footer-list">
+                  <li>
+                    <a href="https://www.facebook.com/SciPytechceo"
+                      ><i class="fa-brands fa-facebook"></i>facebook</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://www.instagram.com/scipytechnologies/"
+                      ><i class="fa-brands fa-instagram"></i>instagram</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/company/scipytechnologies/mycompany/"
+                      ><i class="fa-brands fa-linkedin"></i>linkedin</a
+                    >
+                  </li>
+                  <li>
+                    <a href="mailto:info@scipytechnologies.com"
+                      ><i class="fa-solid fa-envelope"></i>mail us</a
+                    >
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
