--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
             >
               <div class="home-col text-container">
                 <h1 class="h1-large fade-in">
-                  SciPy <br class="br-tag" />
-                  Technologies
+                  Digital <br class="br-tag" />
+                  Marketing
                 </h1>
                 <h5 class="home-card-title fade-in">
                   Make Your Move Mark Your Success
@@ -179,7 +179,7 @@
               <div class="home-col image-container">
                 <img
                   id="moving-home-image"
-                  src="./assets/header-image.png"
+                  src="./assets/digital-marketing.svg"
                   alt=""
                 />
               </div>
@@ -189,8 +189,8 @@
             >
               <div class="home-col text-container">
                 <h1 class="h1-large fade-in">
-                  SciPy <br class="br-tag" />
-                  Technologies
+                  ERP <br class="br-tag" />
+                  Solutions
                 </h1>
                 <h5 class="home-card-title fade-in">
                   Make Your Move Mark Your Success
@@ -222,7 +222,50 @@
               <div class="home-col image-container">
                 <img
                   id="moving-home-image"
-                  src="./assets/header-image.png"
+                  src="./assets/business-investment.svg"
+                  alt=""
+                />
+              </div>
+            </div>
+            <div
+              class="home-row item d-flex justify-content-between align-items-center m-auto"
+            >
+              <div class="home-col text-container">
+                <h1 class="h1-large fade-in">
+                  Website <br class="br-tag" />
+                  Development
+                </h1>
+                <h5 class="home-card-title fade-in">
+                  Make Your Move Mark Your Success
+                </h5>
+                <p class="p-large fade-in">
+                  SciPy Technologies is a Thiruvananthapuram based company
+                  offering unique solutions and a variety of services in the
+                  field of Artificial intelligence. Our family is setting the
+                  industry standards, positioning us as category leaders
+                  worldwide. Our team members are technology veterans, committed
+                  to providing smart solutions for any size of project. Contact
+                  us to request a demo or meet a member of our team.
+                </p>
+                <div class="services-div fade-in">
+                  <a
+                    id="service-btn"
+                    role="button"
+                    class="btn btn-primary services-btn btn-effect"
+                  >
+                    <div class="text-wrap">
+                      <span class="text-1"
+                        >Get Services <i class="fa-solid fa-arrow-right"></i
+                      ></span>
+                      <!-- <span class="text-2">Get Services <i class="fa-solid fa-arrow-right"></i></span> -->
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <div class="home-col image-container">
+                <img
+                  id="moving-home-image"
+                  src="./assets/webDev.svg"
                   alt=""
                 />
               </div>
@@ -600,153 +643,6 @@
                   <p class="member-position">System Engineer</p>
                 </div>
               </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img
-                    class="team-img"
-                    src="./assets/teams/vargees.jpg"
-                    alt=""
-                  />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Varghese</a></h4>
-                  <p class="member-position">Software Developer</p>
-                </div>
-              </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img
-                    class="team-img"
-                    src="./assets/teams/nithya.jpeg"
-                    alt=""
-                  />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Nithya Rajendran</a></h4>
-                  <p class="member-position">Software Developer</p>
-                </div>
-              </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img
-                    class="team-img"
-                    src="./assets/teams/chinju.jpg"
-                    alt=""
-                  />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Chinju</a></h4>
-                  <p class="member-position">System Engineer</p>
-                </div>
-              </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img
-                    class="team-img"
-                    src="./assets/teams/vargees.jpg"
-                    alt=""
-                  />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Varghese</a></h4>
-                  <p class="member-position">Software Developer</p>
-                </div>
-              </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img
-                    class="team-img"
-                    src="./assets/teams/nithya.jpeg"
-                    alt=""
-                  />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Nithya Rajendran</a></h4>
-                  <p class="member-position">Software Developer</p>
-                </div>
-              </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img
-                    class="team-img"
-                    src="./assets/teams/chinju.jpg"
-                    alt=""
-                  />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Chinju</a></h4>
-                  <p class="member-position">System Engineer</p>
-                </div>
-              </div>
-              <div class="team-col">
-                <div class="team-image-div">
-                  <img
-                    class="team-img"
-                    src="./assets/teams/vargees.jpg"
-                    alt=""
-                  />
-                  <div
-                    class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
-                  >
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </div>
-                </div>
-                <div class="team-content">
-                  <h4><a href="#" class="member-name">Varghese</a></h4>
-                  <p class="member-position">Software Developer</p>
-                </div>
-              </div>
             </div>
           </div>
         </div>
@@ -759,25 +655,25 @@
           <div class="clients">
             <div class="owl-carousel owl-theme clients-owl">
               <div class="clients-logo">
-                <img src="./assets/clients/1.png" alt="" />
+                <img src="./assets/clients/finnexia.png" alt="" />
               </div>
               <div class="clients-logo">
-                <img src="./assets/clients/1.png" alt="" />
+                <img src="./assets/clients/gbsplus.svg" alt="" />
               </div>
               <div class="clients-logo">
-                <img src="./assets/clients/1.png" alt="" />
+                <img src="./assets/clients/amrita logo.svg" alt="" />
               </div>
               <div class="clients-logo">
-                <img src="./assets/clients/1.png" alt="" />
+                <img src="./assets/clients/mgc-logo.png" alt="" />
               </div>
               <div class="clients-logo">
-                <img src="./assets/clients/1.png" alt="" />
+                <img src="./assets/clients/stjoseph.png" alt="" />
               </div>
               <div class="clients-logo">
-                <img src="./assets/clients/1.png" alt="" />
+                <img src="./assets/clients/canara.png" alt="" />
               </div>
               <div class="clients-logo">
-                <img src="./assets/clients/1.png" alt="" />
+                <img src="./assets/clients/orian.png" alt="" />
               </div>
             </div>
           </div>
@@ -800,7 +696,7 @@
                 <img src="./assets/contacts/1.jpg" alt="" />
               </div>
               <div class="lower-contact">
-                <h5><a href="#">Contact-1</a></h5>
+                <h5><a href="#">Website Development</a></h5>
                 <p class="contact-detail">
                   <i class="fa-solid fa-phone"></i><span>+9074376257</span>
                 </p>
@@ -820,7 +716,7 @@
                 <img src="./assets/contacts/1.jpg" alt="" />
               </div>
               <div class="lower-contact">
-                <h5><a href="#">Contact-1</a></h5>
+                <h5><a href="#">Digital Marketing</a></h5>
                 <p class="contact-detail">
                   <i class="fa-solid fa-phone"></i><span>+9074376257</span>
                 </p>
@@ -840,7 +736,7 @@
                 <img src="./assets/contacts/1.jpg" alt="" />
               </div>
               <div class="lower-contact">
-                <h5><a href="#">Contact-1</a></h5>
+                <h5><a href="#">ERP Solutions</a></h5>
                 <p class="contact-detail">
                   <i class="fa-solid fa-phone"></i><span>+9074376257</span>
                 </p>
