add more client logos

--- a/index.html
+++ b/index.html
@@ -664,10 +664,16 @@
                 <img src="./assets/clients/amrita logo.svg" alt="" />
               </div>
               <div class="clients-logo">
-                <img src="./assets/clients/mgc-logo.png" alt="" />
+                <img src="./assets/clients/mge-logo.png" alt="" />
+              </div>
+              <div class="clients-logo">
+                <img src="./assets/clients/maptell-logo.png" alt="" />
               </div>
               <div class="clients-logo">
                 <img src="./assets/clients/stjoseph.png" alt="" />
+              </div>
+              <div class="clients-logo">
+                <img src="./assets/clients/catholicate.png" alt="" />
               </div>
               <div class="clients-logo">
                 <img src="./assets/clients/canara.png" alt="" />
